# MindLeapAI

./: .gitignore  config.py  database.db  demo.py  idea.txt  main.py  orchestrator.py  pyproject.toml  requirements.txt  reset_db.py  schemas.py
agents/: discipline_coach.py  performance_analyst.py  practice_agent.py  strategy_agent.py  tutor_agent.py
data/: aptitude_dataset.csv  ingest.py  ingest_aptitude.py
db/: models.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Sidebar.tsx  ui.tsx
frontend/src/pages/: Auth.tsx  Dashboard.tsx  Mock.tsx  MockReview.tsx  Onboarding.tsx  Study.tsx  Vault.tsx
frontend/src/store/: useStore.ts
graphs/: strategy_graph.py  study_graph.py
services/: rag_service.py
