[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.0",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.9",
    "passlib>=1.7.4",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "rapidfuzz>=3.14.5",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.45.0",
]
